# ai4os-yolov8-torch

./: .gitignore  CITATION.cff  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  MODULES.yml  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: github-to-gitlab.yml  githubsync.yml
.sqa/: config.yml
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
deep-sea-lab/: DeepSeaLab.ipynb  Functions.py  Pipeline_txt.py  config.txt
docs/: Makefile  conf.py  index.rst  make.bat
football-players-detection-4/: README.roboflow.txt
football-players-detection-4/train/: labels.cache
football-players-detection-4/valid/: labels.cache
models/20230810_124621/: args.yaml  events.out.tfevents.1691671584.21d752e91220.478784.0  results.csv
models/20230810_125101/: args.yaml  events.out.tfevents.1691671863.21d752e91220.482856.0  results.csv
models/20230810_152248/: args.yaml  events.out.tfevents.1691680970.21d752e91220.493000.0
models/20230810_152305/: args.yaml  events.out.tfevents.1691680987.21d752e91220.493255.0  results.csv
models/20230810_152416/: args.yaml  events.out.tfevents.1691681058.21d752e91220.494277.0
models/20230811_082904/: args.yaml  events.out.tfevents.1691742546.21d752e91220.536934.0
models/20230811_084304/: args.yaml  events.out.tfevents.1691743387.21d752e91220.541546.0
models/20230811_122401/: args.yaml  events.out.tfevents.1691756643.21d752e91220.581415.0
models/20230825_114025/: args.yaml
models/20230825_114200/: args.yaml
models/20230825_114334/: args.yaml  events.out.tfevents.1692963821.12eeeba7126e.1776760.0
models/20230830_121932/: args.yaml  events.out.tfevents.1693397976.12eeeba7126e.1831865.0
models/20230830_134451/: args.yaml  events.out.tfevents.1693403093.12eeeba7126e.1853794.0
models/20230830_134627/: args.yaml  events.out.tfevents.1693403189.12eeeba7126e.1854309.0
models/20230830_135252/: args.yaml  events.out.tfevents.1693403574.12eeeba7126e.1855143.0  results.csv
models/20230830_140952/: args.yaml  events.out.tfevents.1693404595.12eeeba7126e.1864358.0  results.csv
models/20230830_141351/: args.yaml  events.out.tfevents.1693404832.12eeeba7126e.1864358.1
models/20230830_141526/: args.yaml  events.out.tfevents.1693404933.12eeeba7126e.1866683.0
models/20230830_141818/: args.yaml  events.out.tfevents.1693405100.12eeeba7126e.1868013.0  results.csv
models/20230830_1418182/: args.yaml  events.out.tfevents.1693412633.12eeeba7126e.1939072.0
models/20230830_161327/: args.yaml  (+1 more)
notebooks/: 1.0-yolov8_api_start.ipynb
tests/: conftest.py  test_deepaas.py
wandb/: latest-run
yolov8/: preprocess_ann.py
yolov8_api/: README.md  __init__.py  config.py  preprocess_ann.py  seg_coco_json_to_yolo.py  trainer.py  utils.py  xml_to_yolo_format.py
yolov8_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+429 files in other folders)
