[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_species_detection"
description = "Deep Sea Spieces Detection"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Antoine Lebeaud", email= "antoine.lebeaud.ifremer@gmail.com"} ,{name= "Vanessa Tosello", email= "vanessa.tosello@ifremer.fr"} ]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/deep-species-detection"
"Bug Tracker" = "https://github.com/ai4os-hub/deep-species-detection/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["yolov8", "deep_species_detection.api"]

[tool.setuptools.package-dir]
"deep_species_detection.api" = "api"
"yolov8" = "yolov8"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
deep_species_detection = "deep_species_detection.api"
